aggiunte github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Artorias718/MB-Calculators",
+  "homepage": "https://Artorias718.github.io/MB-Calculators",
   "name": "matched-betting-calculator",
   "version": "0.1.0",
   "private": true,
